--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,27 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow: auto;
+}
+
+.scroll-x
+{
+  min-width: 500px;
+}
+
+.scroll-x-container
+{
+  overflow-x: auto;
+}
+
+.scroll-x-container::-webkit-scrollbar
+{
+	height: 6px;
+}
+
+.scroll-x-container::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+	background-color: #666;
 }
