--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --bootstrap-xs-max: 576px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +10,7 @@ body {
 
 .scroll-x
 {
-  min-width: 500px;
+  min-width: var(--bootstrap-xs-max);
 }
 
 .scroll-x-container
@@ -25,4 +29,15 @@ body {
   box-shadow: inset 0 0 6px rgba(0,0,0,.1);
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
 	background-color: #666;
+}
+
+@media (max-width: 576px) {
+  #main-header {
+    padding: 0;
+    display: flex;
+  }
+
+  #main-nav {
+    margin: 0 auto;
+  }
 }
