--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,3 +1,13 @@
-.scratch {
-    overflow: hidden;
+.button-no-style,
+.button-no-style:hover,
+.button-no-style:focus {
+    color: #1890ff;
+    border: 0;
+    outline: 0;
+    padding: 0; 
+    background: none;
+}
+
+h2, h4, p {
+    text-align: center;
 }
