--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,19 @@ body {
   padding: 0;
 }
 
+.button-no-style,
+.button-no-style:hover,
+.button-no-style:focus {
+    color: #1890ff;
+    border: 0;
+    outline: 0;
+    padding: 0; 
+    background: none;
+    display: inline;
+    text-align: left;
+    cursor: pointer;
+}
+
 .scroll-x
 {
   min-width: var(--bootstrap-xs-max);
