--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,8 @@
 /* Home */
+/* .ant-carousel {
+  width: 600px;
+} */
+
 #homeTitle {
   font-family: 'Anonymous Pro', monospace;
   overflow-x: hidden;
