--- a/src/index.css
+++ b/src/index.css
@@ -116,5 +116,5 @@ body {
 .ant-fullcalendar-date:hover,
 .ant-fullcalendar-month:hover,
 .ant-select-dropdown-menu-item-active {
-  background-color: #e9effc !important;
+  background-color: #E8E6EC !important;
 }
